--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -38,114 +38,115 @@ Umathprimespaceafter Umathprimevariant Umathprimewidth Umathquad Umathradicaldeg
 Umathradicaldegreebefore Umathradicaldegreeraise Umathradicalextensibleafter Umathradicalextensiblebefore Umathradicalkern \
 Umathradicalrule Umathradicalvariant Umathradicalvgap Umathruledepth Umathruleheight \
 Umathskeweddelimitertolerance Umathskewedfractionhgap Umathskewedfractionvgap Umathsource Umathspaceafterscript \
-Umathspacebeforescript Umathstackdenomdown Umathstacknumup Umathstackvariant Umathstackvgap \
-Umathsubscriptsnap Umathsubscriptvariant Umathsubshiftdistance Umathsubshiftdown Umathsubshiftdrop \
-Umathsubsupshiftdown Umathsubsupvgap Umathsubtopmax Umathsupbottommin Umathsuperscriptsnap \
-Umathsuperscriptvariant Umathsupshiftdistance Umathsupshiftdrop Umathsupshiftup Umathsupsubbottommax \
-Umathtopaccentvariant Umathunderbarkern Umathunderbarrule Umathunderbarvgap Umathunderdelimiterbgap \
-Umathunderdelimitervariant Umathunderdelimitervgap Umathunderlinevariant Umathuseaxis Umathvextensiblevariant \
-Umathvoid Umathxscale Umathyscale Umiddle Uoperator \
-Uover Uoverdelimiter Uoverwithdelims Uradical Uright \
-Uroot Urooted Uskewed Uskewedwithdelims Ustartdisplaymath \
-Ustartmath Ustartmathmode Ustopdisplaymath Ustopmath Ustopmathmode \
-Ustretched Ustretchedwithdelims Uunderdelimiter Uvextensible additionalpageskip \
-adjustspacing adjustspacingshrink adjustspacingstep adjustspacingstretch advanceby \
-afterassigned aftergrouped aliased aligncontent alignmark \
-alignmentcellsource alignmentwrapsource aligntab allcrampedstyles alldisplaystyles \
-allmainstyles allmathstyles allscriptscriptstyles allscriptstyles allsplitstyles \
-alltextstyles alluncrampedstyles allunsplitstyles amcode associateunit \
-atendoffile atendoffiled atendofgroup atendofgrouped attribute \
-attributedef automaticdiscretionary automatichyphenpenalty automigrationmode autoparagraphmode \
-begincsname beginlocalcontrol beginmathgroup beginsimplegroup boundary \
-boxadapt boxanchor boxanchors boxattribute boxdirection \
-boxfinalize boxfreeze boxgeometry boxlimit boxlimitate \
-boxlimitmode boxorientation boxrepack boxshift boxshrink \
-boxsource boxstretch boxtarget boxtotal boxvadjust \
-boxxmove boxxoffset boxymove boxyoffset catcodetable \
-cdef cdefcsname cfcode clearmarks constant \
-constrained copymathatomrule copymathparent copymathspacing crampeddisplaystyle \
-crampedscriptscriptstyle crampedscriptstyle crampedtextstyle csactive csstring \
-currentloopiterator currentloopnesting currentmarks dbox defcsname \
-deferred detokened detokenized dimensiondef dimexpression \
-directlua discretionaryoptions divideby doubleadjdemerits dpack \
-dsplit edefcsname edivide edivideby efcode \
-emergencyleftskip emergencyrightskip endlocalcontrol endmathgroup endsimplegroup \
-enforced etoks etoksapp etokspre eufactor \
-everybeforepar everymathatom everytab exceptionpenalty expand \
-expandactive expandafterpars expandafterspaces expandcstoken expanded \
-expandedafter expandeddetokenize expandedendless expandedloop expandedrepeat \
-expandparameter expandtoken expandtoks explicitdiscretionary explicithyphenpenalty \
-explicititaliccorrection explicitspace firstvalidlanguage float floatdef \
-floatexpr flushmarks fontcharba fontcharta fontid \
-fontmathcontrol fontspecdef fontspecid fontspecifiedname fontspecifiedsize \
-fontspecscale fontspecslant fontspecweight fontspecxscale fontspecyscale \
-fonttextcontrol forcedleftcorrection forcedrightcorrection formatname frozen \
-futurecsname futuredef futureexpand futureexpandis futureexpandisap \
-gdefcsname givenmathstyle gleaders glet gletcsname \
-glettonothing gluespecdef glyph glyphdatafield glyphoptions \
-glyphscale glyphscriptfield glyphscriptscale glyphscriptscriptscale glyphslant \
-glyphstatefield glyphtextscale glyphweight glyphxoffset glyphxscale \
-glyphxscaled glyphyoffset glyphyscale glyphyscaled gtoksapp \
-gtokspre hccode hjcode hmcode holdingmigrations \
-hpack hpenalty hyphenationmin hyphenationmode ifabsdim \
-ifabsfloat ifabsnum ifarguments ifboolean ifchkdim \
-ifchkdimension ifchknum ifchknumber ifcmpdim ifcmpnum \
-ifcondition ifcramped ifcstok ifdimexpression ifdimval \
-ifempty ifflags iffloat ifhaschar ifhastok \
-ifhastoks ifhasxtoks ifinalignment ifincsname ifinsert \
-ifintervaldim ifintervalfloat ifintervalnum iflastnamedcs ifmathparameter \
-ifmathstyle ifnumexpression ifnumval ifparameter ifparameters \
-ifrelax iftok ifzerodim ifzerofloat ifzeronum \
-ignorearguments ignoredepthcriterion ignorenestedupto ignorepars ignorerest \
-ignoreupto immediate immutable indexofcharacter indexofregister \
-inherited initcatcodetable initialpageskip initialtopskip insertbox \
-insertcopy insertdepth insertdistance insertheight insertheights \
-insertlimit insertmaxdepth insertmode insertmultiplier insertpenalty \
-insertprogress insertstorage insertstoring insertunbox insertuncopy \
-insertwidth instance integerdef lastarguments lastatomclass \
-lastboundary lastchkdimension lastchknumber lastleftclass lastloopiterator \
-lastnamedcs lastnodesubtype lastpageextra lastparcontext lastpartrigger \
-lastrightclass leftmarginkern letcharcode letcsname letfrozen \
-letmathatomrule letmathparent letmathspacing letprotected lettolastnamedcs \
-lettonothing linebreakcriterion linebreakoptional linebreakpasses linedirection \
-localbrokenpenalty localcontrol localcontrolled localcontrolledendless localcontrolledloop \
-localcontrolledrepeat localinterlinepenalty localleftbox localleftboxbox localmiddlebox \
-localmiddleboxbox localpretolerance localrightbox localrightboxbox localtolerance \
-lpcode luabytecode luabytecodecall luacopyinputnodes luadef \
-luaescapestring luafunction luafunctioncall luatexbanner luatexrevision \
-luatexversion mathatom mathatomglue mathatomskip mathbackwardpenalties \
-mathbeginclass mathboundary mathcharclass mathcharfam mathcharslot \
-mathcheckfencesmode mathclass mathdictgroup mathdictionary mathdictproperties \
-mathdirection mathdiscretionary mathdisplaymode mathdisplaypenaltyfactor mathdisplayskipmode \
-mathdoublescriptmode mathendclass matheqnogapstep mathfontcontrol mathforwardpenalties \
-mathgluemode mathgroupingmode mathinlinepenaltyfactor mathleftclass mathlimitsmode \
-mathmainstyle mathnolimitsmode mathparentstyle mathpenaltiesmode mathpretolerance \
-mathrightclass mathrulesfam mathrulesmode mathscale mathscriptsmode \
-mathslackmode mathspacingmode mathstack mathstackstyle mathstyle \
-mathstylefontid mathsurroundmode mathsurroundskip maththreshold mathtolerance \
-meaningasis meaningful meaningfull meaningles meaningless \
-mugluespecdef multiplyby mutable nestedloopiterator noaligned \
-noatomruling noboundary nohrule norelax normalizelinemode \
-normalizeparmode nospaces nosubprescript nosubscript nosuperprescript \
-nosuperscript novrule numericscale numericscaled numexpression \
-optionalboundary orelse orphanpenalties orphanpenalty orunless \
-outputbox overloaded overloadmode overshoot pageboundary \
-pagedepth pageexcess pageextragoal pagefistretch pagelastdepth \
-pagelastfilllstretch pagelastfillstretch pagelastfilstretch pagelastfistretch pagelastheight \
-pagelastshrink pagelaststretch pagevsize parametercount parameterdef \
-parameterindex parametermark parametermode parattribute pardirection \
-parfillleftskip parfillrightskip parinitleftskip parinitrightskip parpasses \
-parshapewidth permanent pettymuskip positdef postexhyphenchar \
-posthyphenchar postinlinepenalty postshortinlinepenalty prebinoppenalty predisplaygapfactor \
-preexhyphenchar prehyphenchar preinlinepenalty prerelpenalty preshortinlinepenalty \
-previousloopiterator primescript protecteddetokenize protectedexpandeddetokenize protrudechars \
-protrusionboundary pxdimen quitloop quitloopnow quitvmode \
-rdivide rdivideby realign resetmathspacing restorecatcodetable \
-retained retokenized rightmarginkern rpcode savecatcodetable \
-scaledemwidth scaledexheight scaledextraspace scaledfontcharba scaledfontchardp \
-scaledfontcharht scaledfontcharic scaledfontcharta scaledfontcharwd scaledfontdimen \
-scaledinterwordshrink scaledinterwordspace scaledinterwordstretch scaledmathaxis scaledmathemwidth \
-scaledmathexheight scaledmathstyle scaledslantperpoint scantextokens semiexpand \
+Umathspacebeforescript Umathspacebetweenscript Umathstackdenomdown Umathstacknumup Umathstackvariant \
+Umathstackvgap Umathsubscriptsnap Umathsubscriptvariant Umathsubshiftdistance Umathsubshiftdown \
+Umathsubshiftdrop Umathsubsupshiftdown Umathsubsupvgap Umathsubtopmax Umathsupbottommin \
+Umathsuperscriptsnap Umathsuperscriptvariant Umathsupshiftdistance Umathsupshiftdrop Umathsupshiftup \
+Umathsupsubbottommax Umathtopaccentvariant Umathunderbarkern Umathunderbarrule Umathunderbarvgap \
+Umathunderdelimiterbgap Umathunderdelimitervariant Umathunderdelimitervgap Umathunderlinevariant Umathuseaxis \
+Umathvextensiblevariant Umathvoid Umathxscale Umathyscale Umiddle \
+Uoperator Uover Uoverdelimiter Uoverwithdelims Uradical \
+Uright Uroot Urooted Uskewed Uskewedwithdelims \
+Ustartdisplaymath Ustartmath Ustartmathmode Ustopdisplaymath Ustopmath \
+Ustopmathmode Ustretched Ustretchedwithdelims Uunderdelimiter Uvextensible \
+additionalpageskip adjustspacing adjustspacingshrink adjustspacingstep adjustspacingstretch \
+advanceby afterassigned aftergrouped aliased aligncontent \
+alignmark alignmentcellsource alignmentwrapsource aligntab allcrampedstyles \
+alldisplaystyles allmainstyles allmathstyles allscriptscriptstyles allscriptstyles \
+allsplitstyles alltextstyles alluncrampedstyles allunsplitstyles amcode \
+associateunit atendoffile atendoffiled atendofgroup atendofgrouped \
+attribute attributedef automaticdiscretionary automatichyphenpenalty automigrationmode \
+autoparagraphmode begincsname beginlocalcontrol beginmathgroup beginsimplegroup \
+boundary boxadapt boxanchor boxanchors boxattribute \
+boxdirection boxfinalize boxfreeze boxgeometry boxlimit \
+boxlimitate boxlimitmode boxorientation boxrepack boxshift \
+boxshrink boxsource boxstretch boxtarget boxtotal \
+boxvadjust boxxmove boxxoffset boxymove boxyoffset \
+catcodetable cdef cdefcsname cfcode clearmarks \
+constant constrained copymathatomrule copymathparent copymathspacing \
+crampeddisplaystyle crampedscriptscriptstyle crampedscriptstyle crampedtextstyle csactive \
+csstring currentloopiterator currentloopnesting currentlysetmathstyle currentmarks \
+dbox defcsname deferred detokened detokenized \
+dimensiondef dimexpression directlua discretionaryoptions divideby \
+doubleadjdemerits dpack dsplit edefcsname edivide \
+edivideby efcode emergencyleftskip emergencyrightskip endlocalcontrol \
+endmathgroup endsimplegroup enforced etoks etoksapp \
+etokspre eufactor everybeforepar everymathatom everytab \
+exceptionpenalty expand expandactive expandafterpars expandafterspaces \
+expandcstoken expanded expandedafter expandeddetokenize expandedendless \
+expandedloop expandedrepeat expandparameter expandtoken expandtoks \
+explicitdiscretionary explicithyphenpenalty explicititaliccorrection explicitspace firstvalidlanguage \
+float floatdef floatexpr flushmarks fontcharba \
+fontcharta fontid fontmathcontrol fontspecdef fontspecid \
+fontspecifiedname fontspecifiedsize fontspecscale fontspecslant fontspecweight \
+fontspecxscale fontspecyscale fonttextcontrol forcedleftcorrection forcedrightcorrection \
+formatname frozen futurecsname futuredef futureexpand \
+futureexpandis futureexpandisap gdefcsname givenmathstyle gleaders \
+glet gletcsname glettonothing gluespecdef glyph \
+glyphdatafield glyphoptions glyphscale glyphscriptfield glyphscriptscale \
+glyphscriptscriptscale glyphslant glyphstatefield glyphtextscale glyphweight \
+glyphxoffset glyphxscale glyphxscaled glyphyoffset glyphyscale \
+glyphyscaled gtoksapp gtokspre hccode hjcode \
+hmcode holdingmigrations hpack hpenalty hyphenationmin \
+hyphenationmode ifabsdim ifabsfloat ifabsnum ifarguments \
+ifboolean ifchkdim ifchkdimension ifchknum ifchknumber \
+ifcmpdim ifcmpnum ifcondition ifcramped ifcstok \
+ifdimexpression ifdimval ifempty ifflags iffloat \
+ifhaschar ifhastok ifhastoks ifhasxtoks ifinalignment \
+ifincsname ifinsert ifintervaldim ifintervalfloat ifintervalnum \
+iflastnamedcs ifmathparameter ifmathstyle ifnumexpression ifnumval \
+ifparameter ifparameters ifrelax iftok ifzerodim \
+ifzerofloat ifzeronum ignorearguments ignoredepthcriterion ignorenestedupto \
+ignorepars ignorerest ignoreupto immediate immutable \
+indexofcharacter indexofregister inherited initcatcodetable initialpageskip \
+initialtopskip insertbox insertcopy insertdepth insertdistance \
+insertheight insertheights insertlimit insertmaxdepth insertmode \
+insertmultiplier insertpenalty insertprogress insertstorage insertstoring \
+insertunbox insertuncopy insertwidth instance integerdef \
+lastarguments lastatomclass lastboundary lastchkdimension lastchknumber \
+lastleftclass lastloopiterator lastnamedcs lastnodesubtype lastpageextra \
+lastparcontext lastpartrigger lastrightclass leftmarginkern letcharcode \
+letcsname letfrozen letmathatomrule letmathparent letmathspacing \
+letprotected lettolastnamedcs lettonothing linebreakcriterion linebreakoptional \
+linebreakpasses linedirection localbrokenpenalty localcontrol localcontrolled \
+localcontrolledendless localcontrolledloop localcontrolledrepeat localinterlinepenalty localleftbox \
+localleftboxbox localmiddlebox localmiddleboxbox localpretolerance localrightbox \
+localrightboxbox localtolerance lpcode luabytecode luabytecodecall \
+luacopyinputnodes luadef luaescapestring luafunction luafunctioncall \
+luatexbanner luatexrevision luatexversion mathatom mathatomglue \
+mathatomskip mathbackwardpenalties mathbeginclass mathboundary mathcharclass \
+mathcharfam mathcharslot mathcheckfencesmode mathclass mathdictgroup \
+mathdictionary mathdictproperties mathdirection mathdiscretionary mathdisplaymode \
+mathdisplaypenaltyfactor mathdisplayskipmode mathdoublescriptmode mathendclass matheqnogapstep \
+mathfontcontrol mathforwardpenalties mathgluemode mathgroupingmode mathinlinepenaltyfactor \
+mathleftclass mathlimitsmode mathmainstyle mathnolimitsmode mathparentstyle \
+mathpenaltiesmode mathpretolerance mathrightclass mathrulesfam mathrulesmode \
+mathscale mathscriptsmode mathslackmode mathspacingmode mathstack \
+mathstackstyle mathstyle mathstylefontid mathsurroundmode mathsurroundskip \
+maththreshold mathtolerance meaningasis meaningful meaningfull \
+meaningles meaningless mugluespecdef multiplyby mutable \
+nestedloopiterator noaligned noatomruling noboundary nohrule \
+norelax normalizelinemode normalizeparmode nospaces nosubprescript \
+nosubscript nosuperprescript nosuperscript novrule numericscale \
+numericscaled numexpression optionalboundary orelse orphanpenalties \
+orphanpenalty orunless outputbox overloaded overloadmode \
+overshoot pageboundary pagedepth pageexcess pageextragoal \
+pagefistretch pagelastdepth pagelastfilllstretch pagelastfillstretch pagelastfilstretch \
+pagelastfistretch pagelastheight pagelastshrink pagelaststretch pagevsize \
+parametercount parameterdef parameterindex parametermark parametermode \
+parattribute pardirection parfillleftskip parfillrightskip parinitleftskip \
+parinitrightskip parpasses parshapewidth permanent pettymuskip \
+positdef postexhyphenchar posthyphenchar postinlinepenalty postshortinlinepenalty \
+prebinoppenalty predisplaygapfactor preexhyphenchar prehyphenchar preinlinepenalty \
+prerelpenalty preshortinlinepenalty previousloopiterator primescript protecteddetokenize \
+protectedexpandeddetokenize protrudechars protrusionboundary pxdimen quitloop \
+quitloopnow quitvmode rdivide rdivideby realign \
+resetmathspacing restorecatcodetable retained retokenized rightmarginkern \
+rpcode savecatcodetable scaledemwidth scaledexheight scaledextraspace \
+scaledfontcharba scaledfontchardp scaledfontcharht scaledfontcharic scaledfontcharta \
+scaledfontcharwd scaledfontdimen scaledinterwordshrink scaledinterwordspace scaledinterwordstretch \
+scaledmathaxis scaledmathemwidth scaledmathexheight scaledmathstyle scaledslantperpoint \
+scantextokens scriptspaceafterfactor scriptspacebeforefactor scriptspacebetweenfactor semiexpand \
 semiexpanded semiprotected setdefaultmathcodes setfontid setmathatomrule \
 setmathdisplaypostpenalty setmathdisplayprepenalty setmathignore setmathoptions setmathpostpenalty \
 setmathprepenalty setmathspacing shapingpenaltiesmode shapingpenalty shiftedsubprescript \
