2024-03-05-cont-tmf.zip

--- a/context/data/scite/context/scite-ctx.properties
+++ b/context/data/scite/context/scite-ctx.properties
@@ -91,6 +91,7 @@ ctx.menulist.pdf=\
     object=seatch_pdf_object
 
 ctx.wraptext.length=80
+#~ ctx.wraptext.length=100
 
 ctx.spellcheck.language=auto
 ctx.spellcheck.wordsize=4
