--- a/context/data/scite/context/scite-context-data-metapost.properties
+++ b/context/data/scite/context/scite-context-data-metapost.properties
@@ -79,48 +79,49 @@ texscriptmode overloadmode linejoin linecap stacking \
 miterlimit warningcheck truecorners defaultcolormodel restoreclipcolor \
 numbersystem numberprecision jobname addto atleast \
 begingroup controls curl delimiters endgroup \
-everyjob exitif expandafter interim let \
-newinternal of randomseed maxknotpool save \
-scantokens runscript maketext shipout step \
-str void tension to until \
-within write btex verbatimtex etex \
-def vardef primarydef secondarydef tertiarydef \
-enddef for forsuffixes forever endfor \
-quote expr suffix text primary \
-secondary tertiary input endinput if \
-fi else elseif true false \
-nullpicture nullpen readstring pencircle normaldeviate \
-readfrom closefrom odd known unknown \
-not decimal reverse uncycle makepath \
-makepen makenep convexed uncontrolled oct \
-hex ASCII char length turningnumber \
-xpart ypart xxpart xypart yxpart \
-yypart redpart greenpart bluepart cyanpart \
-magentapart yellowpart blackpart greypart colormodel \
-prescriptpart postscriptpart stackingpart pathpart penpart \
-dashpart sqrt mexp mlog sind \
-cosd floor uniformdeviate llcorner lrcorner \
-ulcorner urcorner centerof centerofmass corners \
-xrange yrange deltapoint deltaprecontrol deltapostcontrol \
-deltadirection arclength angle cycle nocycle \
-stroked filled clipped grouped bounded \
-or and substring subpath directiontime \
-point precontrol postcontrol direction pathpoint \
-pathprecontrol pathpostcontrol pathdirection penoffset arctime \
-arcpoint arcpointlist subarclength mpversion rotated \
-slanted scaled shifted transformed xscaled \
-yscaled zscaled intersectiontimes intersectiontimeslist envelope \
-boundingpath numeric string boolean path \
-pen nep picture transform color \
-rgbcolor cmykcolor pair end dump \
-batchmode nonstopmode scrollmode errorstopmode silentmode \
-inner outer setproperty showtoken showstats \
-show showvariable showdependencies doublepath contour \
-also withpen dashed withprescript withpostscript \
-withstacking withlinecap withlinejoin withmiterlimit withoutcolor \
-withgreyscale withcolor withrgbcolor withcmykcolor clip \
-setgroup setbounds message errmessage errhelp \
-graypart 
+everyjob exitif firstcontrol secondcontrol expandafter \
+interim let newinternal of randomseed \
+maxknotpool save scantokens runscript maketext \
+shipout step str void tension \
+to until within write btex \
+verbatimtex etex def vardef primarydef \
+secondarydef tertiarydef enddef for forsuffixes \
+forever endfor quote expr suffix \
+text primary secondary tertiary input \
+endinput if fi else elseif \
+true false nullpicture nullpen readstring \
+pencircle normaldeviate readfrom closefrom odd \
+known unknown not decimal reverse \
+uncycle makepath makepen makenep convexed \
+uncontrolled oct hex ASCII char \
+length turningnumber xpart ypart xxpart \
+xypart yxpart yypart redpart greenpart \
+bluepart cyanpart magentapart yellowpart blackpart \
+greypart colormodel prescriptpart postscriptpart stackingpart \
+pathpart penpart dashpart sqrt mexp \
+mlog sind cosd floor uniformdeviate \
+llcorner lrcorner ulcorner urcorner centerof \
+centerofmass corners xrange yrange deltapoint \
+deltaprecontrol deltapostcontrol deltadirection arclength angle \
+cycle nocycle stroked filled clipped \
+grouped bounded or and substring \
+subpath directiontime point precontrol postcontrol \
+direction pathpoint pathprecontrol pathpostcontrol pathdirection \
+penoffset arctime arcpoint arcpointlist subarclength \
+mpversion rotated slanted scaled shifted \
+transformed xscaled yscaled zscaled xrelative \
+yrelative xyrelative xabsolute yabsolute xyabsolute \
+intersectiontimes intersectiontimeslist envelope boundingpath numeric \
+string boolean path pen nep \
+picture transform color rgbcolor cmykcolor \
+pair end dump batchmode nonstopmode \
+scrollmode errorstopmode silentmode inner outer \
+setproperty showtoken showstats show showvariable \
+showdependencies doublepath contour also withpen \
+dashed withprescript withpostscript withstacking withlinecap \
+withlinejoin withmiterlimit withoutcolor withgreyscale withcolor \
+withrgbcolor withcmykcolor clip setgroup setbounds \
+message errmessage errhelp graypart 
 
 keywordclass.metapost.shortcuts=\
 .. ... -- --- \
