--- a/context/data/scite/context/scite-context-data-context.properties
+++ b/context/data/scite/context/scite-context-data-context.properties
@@ -125,16 +125,16 @@ carryoverleftbottomkernclassoptioncode carryoverrighttopkernclassoptioncode carr
 removeitaliccorrectionclassoptioncode operatoritaliccorrectionclassoptioncode shortinlineclassoptioncode pushnestingclassoptioncode popnestingclassoptioncode \
 obeynestingclassoptioncode noitaliccorrectionglyphoptioncode nozeroitaliccorrectionglyphoptioncode noexpansionglyphoptioncode noprotrusionglyphoptioncode \
 noleftkernglyphoptioncode norightkernglyphoptioncode noleftligatureglyphoptioncode norightligatureglyphoptioncode textcheckitalicglyphoptioncode \
-mathcheckitalicglyphoptioncode nokerningcode noligaturingcode noitalicscode allparpassclasses \
-indecentparpassclasses looseparpassclasses tightparpassclasses almostdecentparpassclasses verylooseparpassclass \
-looseparpassclass almostlooseparpassclass barelylooseparpassclass decentparpassclass verytightparpassclass \
-tightparpassclass almosttightparpassclass barelytightparpassclass frozenflagcode tolerantflagcode \
-protectedflagcode primitiveflagcode permanentflagcode noalignedflagcode immutableflagcode \
-mutableflagcode globalflagcode overloadedflagcode immediateflagcode conditionalflagcode \
-valueflagcode instanceflagcode ordmathflattencode binmathflattencode relmathflattencode \
-punctmathflattencode innermathflattencode normalworddiscoptioncode preworddiscoptioncode postworddiscoptioncode \
-preferbreakdiscoptioncode prefernobreakdiscoptioncode noitaliccorrectiondiscoptioncode nozeroitaliccorrectiondiscoptioncode textcheckitalicdiscoptioncode \
-continueifinputfile continuewhenlmtxmode continuewhenmkivmode uunit 
+mathcheckitalicglyphoptioncode weightlessglyphoptioncode nokerningcode noligaturingcode noitalicscode \
+allparpassclasses indecentparpassclasses looseparpassclasses tightparpassclasses almostdecentparpassclasses \
+verylooseparpassclass looseparpassclass almostlooseparpassclass barelylooseparpassclass decentparpassclass \
+verytightparpassclass tightparpassclass almosttightparpassclass barelytightparpassclass frozenflagcode \
+tolerantflagcode protectedflagcode primitiveflagcode permanentflagcode noalignedflagcode \
+immutableflagcode mutableflagcode globalflagcode overloadedflagcode immediateflagcode \
+conditionalflagcode valueflagcode instanceflagcode ordmathflattencode binmathflattencode \
+relmathflattencode punctmathflattencode innermathflattencode normalworddiscoptioncode preworddiscoptioncode \
+postworddiscoptioncode preferbreakdiscoptioncode prefernobreakdiscoptioncode noitaliccorrectiondiscoptioncode nozeroitaliccorrectiondiscoptioncode \
+textcheckitalicdiscoptioncode continueifinputfile continuewhenlmtxmode continuewhenmkivmode uunit 
 
 keywordclass.context.helpers=\
 pushglobalsetups popglobalsetups startsetups stopsetups \
