--- a/context/data/scite/context/scite-context-data-context.properties
+++ b/context/data/scite/context/scite-context-data-context.properties
@@ -101,41 +101,43 @@ mathintegralcode mathellipsiscode mathfunctioncode mathdigitcode mathalphacode \
 mathboxcode mathchoicecode mathnothingcode mathlimopcode mathnolopcode \
 mathunsetcode mathunspacedcode mathallcode mathfakecode mathunarycode \
 mathmaybeordinarycode mathmayberelationcode mathmaybebinarycode mathnumbergroupcode mathchemicalbondcode \
-mathimplicationcode constantnumber constantnumberargument constantdimen constantdimenargument \
-constantemptyargument luastringsep !!bs !!es lefttorightmark \
-righttoleftmark lrm rlm bidilre bidirle \
-bidipop bidilro bidirlo breakablethinspace nobreakspace \
-nonbreakablespace narrownobreakspace zerowidthnobreakspace ideographicspace ideographichalffillspace \
-twoperemspace threeperemspace fourperemspace fiveperemspace sixperemspace \
-figurespace punctuationspace hairspace enquad emquad \
-zerowidthspace zerowidthnonjoiner zerowidthjoiner zwnj zwj \
-optionalspace asciispacechar softhyphen autoinsertedspace Ux \
-eUx startlmtxmode stoplmtxmode startmkivmode stopmkivmode \
-wildcardsymbol normalhyphenationcode automatichyphenationcode explicithyphenationcode syllablehyphenationcode \
-uppercasehyphenationcode collapsehyphenationcode compoundhyphenationcode strictstarthyphenationcode strictendhyphenationcode \
-automaticpenaltyhyphenationcode explicitpenaltyhyphenationcode permitgluehyphenationcode permitallhyphenationcode permitmathreplacehyphenationcode \
-forcecheckhyphenationcode lazyligatureshyphenationcode forcehandlerhyphenationcode feedbackcompoundhyphenationcode ignoreboundshyphenationcode \
-partialhyphenationcode completehyphenationcode normalizelinenormalizecode parindentskipnormalizecode swaphangindentnormalizecode \
-swapparsshapenormalizecode breakafterdirnormalizecode removemarginkernsnormalizecode clipwidthnormalizecode flattendiscretionariesnormalizecode \
-discardzerotabskipsnormalizecode flattenhleadersnormalizecode balanceinlinemathnormalizecode normalizeparnormalizeparcode flattenvleadersnormalizeparcode \
-limitprevgrafnormalizeparcode nopreslackclassoptioncode nopostslackclassoptioncode lefttopkernclassoptioncode righttopkernclassoptioncode \
-leftbottomkernclassoptioncode rightbottomkernclassoptioncode lookaheadforendclassoptioncode noitaliccorrectionclassoptioncode defaultmathclassoptions \
-checkligatureclassoptioncode checkitaliccorrectionclassoptioncode checkkernpairclassoptioncode flattenclassoptioncode omitpenaltyclassoptioncode \
-unpackclassoptioncode raiseprimeclassoptioncode carryoverlefttopkernclassoptioncode carryoverleftbottomkernclassoptioncode carryoverrighttopkernclassoptioncode \
-carryoverrightbottomkernclassoptioncode preferdelimiterdimensionsclassoptioncode autoinjectclassoptioncode removeitaliccorrectionclassoptioncode operatoritaliccorrectionclassoptioncode \
-shortinlineclassoptioncode pushnestingclassoptioncode popnestingclassoptioncode obeynestingclassoptioncode noitaliccorrectionglyphoptioncode \
-nozeroitaliccorrectionglyphoptioncode noexpansionglyphoptioncode noprotrusionglyphoptioncode noleftkernglyphoptioncode norightkernglyphoptioncode \
-noleftligatureglyphoptioncode norightligatureglyphoptioncode textcheckitalicglyphoptioncode mathcheckitalicglyphoptioncode weightlessglyphoptioncode \
-nokerningcode noligaturingcode noitalicscode allparpassclasses indecentparpassclasses \
-looseparpassclasses tightparpassclasses almostdecentparpassclasses verylooseparpassclass looseparpassclass \
-almostlooseparpassclass barelylooseparpassclass decentparpassclass verytightparpassclass tightparpassclass \
-almosttightparpassclass barelytightparpassclass frozenflagcode tolerantflagcode protectedflagcode \
-primitiveflagcode permanentflagcode noalignedflagcode immutableflagcode mutableflagcode \
-globalflagcode overloadedflagcode immediateflagcode conditionalflagcode valueflagcode \
-instanceflagcode ordmathflattencode binmathflattencode relmathflattencode punctmathflattencode \
-innermathflattencode normalworddiscoptioncode preworddiscoptioncode postworddiscoptioncode preferbreakdiscoptioncode \
-prefernobreakdiscoptioncode noitaliccorrectiondiscoptioncode nozeroitaliccorrectiondiscoptioncode textcheckitalicdiscoptioncode continueifinputfile \
-continuewhenlmtxmode continuewhenmkivmode uunit 
+mathimplicationcode mathnormalstylepreset mathcrampedstylepreset mathsubscriptstylepreset mathsuperscriptstylepreset \
+mathsmallstylepreset mathsmallerstylepreset mathnumeratorstylepreset mathdenominatorstylepreset mathdoublesuperscriptstylepreset \
+constantnumber constantnumberargument constantdimen constantdimenargument constantemptyargument \
+luastringsep !!bs !!es lefttorightmark righttoleftmark \
+lrm rlm bidilre bidirle bidipop \
+bidilro bidirlo breakablethinspace nobreakspace nonbreakablespace \
+narrownobreakspace zerowidthnobreakspace ideographicspace ideographichalffillspace twoperemspace \
+threeperemspace fourperemspace fiveperemspace sixperemspace figurespace \
+punctuationspace hairspace enquad emquad zerowidthspace \
+zerowidthnonjoiner zerowidthjoiner zwnj zwj optionalspace \
+asciispacechar softhyphen autoinsertedspace Ux eUx \
+startlmtxmode stoplmtxmode startmkivmode stopmkivmode wildcardsymbol \
+normalhyphenationcode automatichyphenationcode explicithyphenationcode syllablehyphenationcode uppercasehyphenationcode \
+collapsehyphenationcode compoundhyphenationcode strictstarthyphenationcode strictendhyphenationcode automaticpenaltyhyphenationcode \
+explicitpenaltyhyphenationcode permitgluehyphenationcode permitallhyphenationcode permitmathreplacehyphenationcode forcecheckhyphenationcode \
+lazyligatureshyphenationcode forcehandlerhyphenationcode feedbackcompoundhyphenationcode ignoreboundshyphenationcode partialhyphenationcode \
+completehyphenationcode normalizelinenormalizecode parindentskipnormalizecode swaphangindentnormalizecode swapparsshapenormalizecode \
+breakafterdirnormalizecode removemarginkernsnormalizecode clipwidthnormalizecode flattendiscretionariesnormalizecode discardzerotabskipsnormalizecode \
+flattenhleadersnormalizecode balanceinlinemathnormalizecode normalizeparnormalizeparcode flattenvleadersnormalizeparcode limitprevgrafnormalizeparcode \
+nopreslackclassoptioncode nopostslackclassoptioncode lefttopkernclassoptioncode righttopkernclassoptioncode leftbottomkernclassoptioncode \
+rightbottomkernclassoptioncode lookaheadforendclassoptioncode noitaliccorrectionclassoptioncode defaultmathclassoptions checkligatureclassoptioncode \
+checkitaliccorrectionclassoptioncode checkkernpairclassoptioncode flattenclassoptioncode omitpenaltyclassoptioncode unpackclassoptioncode \
+raiseprimeclassoptioncode carryoverlefttopkernclassoptioncode carryoverleftbottomkernclassoptioncode carryoverrighttopkernclassoptioncode carryoverrightbottomkernclassoptioncode \
+preferdelimiterdimensionsclassoptioncode autoinjectclassoptioncode removeitaliccorrectionclassoptioncode operatoritaliccorrectionclassoptioncode shortinlineclassoptioncode \
+pushnestingclassoptioncode popnestingclassoptioncode obeynestingclassoptioncode noitaliccorrectionglyphoptioncode nozeroitaliccorrectionglyphoptioncode \
+noexpansionglyphoptioncode noprotrusionglyphoptioncode noleftkernglyphoptioncode norightkernglyphoptioncode noleftligatureglyphoptioncode \
+norightligatureglyphoptioncode textcheckitalicglyphoptioncode mathcheckitalicglyphoptioncode weightlessglyphoptioncode nokerningcode \
+noligaturingcode noitalicscode allparpassclasses indecentparpassclasses looseparpassclasses \
+tightparpassclasses almostdecentparpassclasses verylooseparpassclass looseparpassclass almostlooseparpassclass \
+barelylooseparpassclass decentparpassclass verytightparpassclass tightparpassclass almosttightparpassclass \
+barelytightparpassclass frozenflagcode tolerantflagcode protectedflagcode primitiveflagcode \
+permanentflagcode noalignedflagcode immutableflagcode mutableflagcode globalflagcode \
+overloadedflagcode immediateflagcode conditionalflagcode valueflagcode instanceflagcode \
+ordmathflattencode binmathflattencode relmathflattencode punctmathflattencode innermathflattencode \
+normalworddiscoptioncode preworddiscoptioncode postworddiscoptioncode preferbreakdiscoptioncode prefernobreakdiscoptioncode \
+noitaliccorrectiondiscoptioncode nozeroitaliccorrectiondiscoptioncode textcheckitalicdiscoptioncode continueifinputfile continuewhenlmtxmode \
+continuewhenmkivmode uunit 
 
 keywordclass.context.helpers=\
 pushglobalsetups popglobalsetups startsetups stopsetups \
