--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -32,16 +32,15 @@ Umathlimitabovebgap Umathlimitabovekern Umathlimitabovevgap Umathlimitbelowbgap 
 Umathlimitbelowvgap Umathlimits Umathnoaxis Umathnolimits Umathnolimitsubfactor \
 Umathnolimitsupfactor Umathnumeratorvariant Umathopenupdepth Umathopenupheight Umathoperatorsize \
 Umathoverbarkern Umathoverbarrule Umathoverbarvgap Umathoverdelimiterbgap Umathoverdelimitervariant \
-Umathoverdelimitervgap Umathoverlayaccentvariant Umathoverlinevariant Umathphantom Umathpresubshiftdistance \
-Umathpresupshiftdistance Umathprimeraise Umathprimeraisecomposed Umathprimeshiftdrop Umathprimeshiftup \
-Umathprimespaceafter Umathprimevariant Umathprimewidth Umathquad Umathradicaldegreeafter \
-Umathradicaldegreebefore Umathradicaldegreeraise Umathradicalextensibleafter Umathradicalextensiblebefore Umathradicalkern \
-Umathradicalrule Umathradicalvariant Umathradicalvgap Umathruledepth Umathruleheight \
-Umathskeweddelimitertolerance Umathskewedfractionhgap Umathskewedfractionvgap Umathsource Umathspaceafterscript \
-Umathspacebeforescript Umathspacebetweenscript Umathstackdenomdown Umathstacknumup Umathstackvariant \
-Umathstackvgap Umathsubscriptsnap Umathsubscriptvariant Umathsubshiftdistance Umathsubshiftdown \
-Umathsubshiftdrop Umathsubsupshiftdown Umathsubsupvgap Umathsubtopmax Umathsupbottommin \
-Umathsuperscriptsnap Umathsuperscriptvariant Umathsupshiftdistance Umathsupshiftdrop Umathsupshiftup \
+Umathoverdelimitervgap Umathoverlayaccentvariant Umathoverlinevariant Umathphantom Umathprimeraise \
+Umathprimeraisecomposed Umathprimeshiftdrop Umathprimeshiftup Umathprimespaceafter Umathprimevariant \
+Umathquad Umathradicaldegreeafter Umathradicaldegreebefore Umathradicaldegreeraise Umathradicalextensibleafter \
+Umathradicalextensiblebefore Umathradicalkern Umathradicalrule Umathradicalvariant Umathradicalvgap \
+Umathruledepth Umathruleheight Umathskeweddelimitertolerance Umathskewedfractionhgap Umathskewedfractionvgap \
+Umathsource Umathspaceafterscript Umathspacebeforescript Umathspacebetweenscript Umathstackdenomdown \
+Umathstacknumup Umathstackvariant Umathstackvgap Umathsubscriptsnap Umathsubscriptvariant \
+Umathsubshiftdown Umathsubshiftdrop Umathsubsupshiftdown Umathsubsupvgap Umathsubtopmax \
+Umathsupbottommin Umathsuperscriptsnap Umathsuperscriptvariant Umathsupshiftdrop Umathsupshiftup \
 Umathsupsubbottommax Umathtopaccentvariant Umathunderbarkern Umathunderbarrule Umathunderbarvgap \
 Umathunderdelimiterbgap Umathunderdelimitervariant Umathunderdelimitervgap Umathunderlinevariant Umathuseaxis \
 Umathvextensiblevariant Umathvoid Umathxscale Umathyscale Umiddle \
@@ -98,60 +97,60 @@ ifintervalfloat ifintervalnum iflastnamedcs ifmathparameter ifmathstyle \
 ifnumexpression ifnumval ifparameter ifparameters ifrelax \
 iftok ifzerodim ifzerofloat ifzeronum ignorearguments \
 ignoredepthcriterion ignorenestedupto ignorepars ignorerest ignoreupto \
-immediate immutable indexofcharacter indexofregister inherited \
-initcatcodetable initialpageskip initialtopskip insertbox insertcopy \
-insertdepth insertdistance insertheight insertheights insertlimit \
-insertmaxdepth insertmode insertmultiplier insertpenalty insertprogress \
-insertstorage insertstoring insertunbox insertuncopy insertwidth \
-instance integerdef lastarguments lastatomclass lastboundary \
-lastchkdimension lastchknumber lastleftclass lastloopiterator lastnamedcs \
-lastnodesubtype lastpageextra lastparcontext lastpartrigger lastrightclass \
-leftmarginkern letcharcode letcsname letfrozen letmathatomrule \
-letmathparent letmathspacing letprotected lettolastnamedcs lettonothing \
-linebreakoptional linebreakpasses linedirection localbrokenpenalty localcontrol \
-localcontrolled localcontrolledendless localcontrolledloop localcontrolledrepeat localinterlinepenalty \
-localleftbox localleftboxbox localmiddlebox localmiddleboxbox localpretolerance \
-localrightbox localrightboxbox localtolerance lpcode luabytecode \
-luabytecodecall luacopyinputnodes luadef luaescapestring luafunction \
-luafunctioncall luatexbanner luatexrevision luatexversion mathatom \
-mathatomglue mathatomskip mathbackwardpenalties mathbeginclass mathboundary \
-mathcharclass mathcharfam mathcharslot mathcheckfencesmode mathclass \
-mathdictgroup mathdictionary mathdictproperties mathdirection mathdiscretionary \
-mathdisplaymode mathdisplaypenaltyfactor mathdisplayskipmode mathdoublescriptmode mathendclass \
-matheqnogapstep mathfontcontrol mathforwardpenalties mathgluemode mathgroupingmode \
-mathinlinepenaltyfactor mathleftclass mathlimitsmode mathmainstyle mathnolimitsmode \
-mathparentstyle mathpenaltiesmode mathpretolerance mathrightclass mathrulesfam \
-mathrulesmode mathscale mathscriptsmode mathslackmode mathspacingmode \
-mathstack mathstackstyle mathstyle mathstylefontid mathsurroundmode \
-mathsurroundskip maththreshold mathtolerance meaningasis meaningful \
-meaningfull meaningles meaningless mugluespecdef multiplyby \
-mutable nestedloopiterator noaligned noatomruling noboundary \
-nohrule nomathchar norelax normalizelinemode normalizeparmode \
-noscript nospaces nosubprescript nosubscript nosuperprescript \
-nosuperscript novrule numericscale numericscaled numexpression \
-optionalboundary orelse orphanpenalties orphanpenalty orunless \
-outputbox overloaded overloadmode overshoot pageboundary \
-pagedepth pageexcess pageextragoal pagefistretch pagelastdepth \
-pagelastfilllstretch pagelastfillstretch pagelastfilstretch pagelastfistretch pagelastheight \
-pagelastshrink pagelaststretch pagevsize parametercount parameterdef \
-parameterindex parametermark parametermode parattribute pardirection \
-parfillleftskip parfillrightskip parinitleftskip parinitrightskip parpasses \
-parshapewidth permanent pettymuskip positdef postexhyphenchar \
-posthyphenchar postinlinepenalty postshortinlinepenalty prebinoppenalty predisplaygapfactor \
-preexhyphenchar prehyphenchar preinlinepenalty prerelpenalty preshortinlinepenalty \
-previousloopiterator primescript protecteddetokenize protectedexpandeddetokenize protrudechars \
-protrusionboundary pxdimen quitloop quitloopnow quitvmode \
-rdivide rdivideby realign resetlocalboxes resetmathspacing \
-restorecatcodetable retained retokenized rightmarginkern rpcode \
-savecatcodetable scaledemwidth scaledexheight scaledextraspace scaledfontcharba \
-scaledfontchardp scaledfontcharht scaledfontcharic scaledfontcharta scaledfontcharwd \
-scaledfontdimen scaledinterwordshrink scaledinterwordspace scaledinterwordstretch scaledmathaxis \
-scaledmathemwidth scaledmathexheight scaledmathstyle scaledslantperpoint scantextokens \
-scriptspaceafterfactor scriptspacebeforefactor scriptspacebetweenfactor semiexpand semiexpanded \
-semiprotected setdefaultmathcodes setfontid setmathatomrule setmathdisplaypostpenalty \
-setmathdisplayprepenalty setmathignore setmathoptions setmathpostpenalty setmathprepenalty \
-setmathspacing shapingpenaltiesmode shapingpenalty shiftedsubprescript shiftedsubscript \
-shiftedsuperprescript shiftedsuperscript shortinlinemaththreshold shortinlineorphanpenalty showcodestack \
+immediate immutable indexedsubprescript indexedsubscript indexedsuperprescript \
+indexedsuperscript indexofcharacter indexofregister inherited initcatcodetable \
+initialpageskip initialtopskip insertbox insertcopy insertdepth \
+insertdistance insertheight insertheights insertlimit insertmaxdepth \
+insertmode insertmultiplier insertpenalty insertprogress insertstorage \
+insertstoring insertunbox insertuncopy insertwidth instance \
+integerdef lastarguments lastatomclass lastboundary lastchkdimension \
+lastchknumber lastleftclass lastloopiterator lastnamedcs lastnodesubtype \
+lastpageextra lastparcontext lastpartrigger lastrightclass leftmarginkern \
+letcharcode letcsname letfrozen letmathatomrule letmathparent \
+letmathspacing letprotected lettolastnamedcs lettonothing linebreakoptional \
+linebreakpasses linedirection localbrokenpenalty localcontrol localcontrolled \
+localcontrolledendless localcontrolledloop localcontrolledrepeat localinterlinepenalty localleftbox \
+localleftboxbox localmiddlebox localmiddleboxbox localpretolerance localrightbox \
+localrightboxbox localtolerance lpcode luabytecode luabytecodecall \
+luacopyinputnodes luadef luaescapestring luafunction luafunctioncall \
+luatexbanner luatexrevision luatexversion mathatom mathatomglue \
+mathatomskip mathbackwardpenalties mathbeginclass mathboundary mathcharclass \
+mathcharfam mathcharslot mathcheckfencesmode mathclass mathdictgroup \
+mathdictionary mathdictproperties mathdirection mathdiscretionary mathdisplaymode \
+mathdisplaypenaltyfactor mathdisplayskipmode mathdoublescriptmode mathendclass matheqnogapstep \
+mathfontcontrol mathforwardpenalties mathgluemode mathgroupingmode mathinlinepenaltyfactor \
+mathleftclass mathlimitsmode mathmainstyle mathnolimitsmode mathparentstyle \
+mathpenaltiesmode mathpretolerance mathrightclass mathrulesfam mathrulesmode \
+mathscale mathscriptsmode mathslackmode mathspacingmode mathstack \
+mathstackstyle mathstyle mathstylefontid mathsurroundmode mathsurroundskip \
+maththreshold mathtolerance meaningasis meaningful meaningfull \
+meaningles meaningless mugluespecdef multiplyby mutable \
+nestedloopiterator noaligned noatomruling noboundary nohrule \
+nomathchar norelax normalizelinemode normalizeparmode noscript \
+nospaces nosubprescript nosubscript nosuperprescript nosuperscript \
+novrule numericscale numericscaled numexpression optionalboundary \
+orelse orphanpenalties orphanpenalty orunless outputbox \
+overloaded overloadmode overshoot pageboundary pagedepth \
+pageexcess pageextragoal pagefistretch pagelastdepth pagelastfilllstretch \
+pagelastfillstretch pagelastfilstretch pagelastfistretch pagelastheight pagelastshrink \
+pagelaststretch pagevsize parametercount parameterdef parameterindex \
+parametermark parametermode parattribute pardirection parfillleftskip \
+parfillrightskip parinitleftskip parinitrightskip parpasses parshapewidth \
+permanent pettymuskip positdef postexhyphenchar posthyphenchar \
+postinlinepenalty postshortinlinepenalty prebinoppenalty predisplaygapfactor preexhyphenchar \
+prehyphenchar preinlinepenalty prerelpenalty preshortinlinepenalty previousloopiterator \
+primescript protecteddetokenize protectedexpandeddetokenize protrudechars protrusionboundary \
+pxdimen quitloop quitloopnow quitvmode rdivide \
+rdivideby realign resetlocalboxes resetmathspacing restorecatcodetable \
+retained retokenized rightmarginkern rpcode savecatcodetable \
+scaledemwidth scaledexheight scaledextraspace scaledfontcharba scaledfontchardp \
+scaledfontcharht scaledfontcharic scaledfontcharta scaledfontcharwd scaledfontdimen \
+scaledinterwordshrink scaledinterwordspace scaledinterwordstretch scaledmathaxis scaledmathemwidth \
+scaledmathexheight scaledmathstyle scaledslantperpoint scantextokens scriptspaceafterfactor \
+scriptspacebeforefactor scriptspacebetweenfactor semiexpand semiexpanded semiprotected \
+setdefaultmathcodes setfontid setmathatomrule setmathdisplaypostpenalty setmathdisplayprepenalty \
+setmathignore setmathoptions setmathpostpenalty setmathprepenalty setmathspacing \
+shapingpenaltiesmode shapingpenalty shortinlinemaththreshold shortinlineorphanpenalty showcodestack \
 showstack singlelinepenalty snapshotpar spacechar spacefactormode \
 spacefactorshrinklimit spacefactorstretchlimit srule subprescript subscript \
 superprescript superscript supmarkmode swapcsvalues tabsize \
