--- a/context/data/scite/context/scite-context-data-context.properties
+++ b/context/data/scite/context/scite-context-data-context.properties
@@ -297,77 +297,77 @@ strutbox strutht strutdp strutwd struthtdp \
 strutgap begstrut endstrut lineheight leftboundary \
 rightboundary signalcharacter ascender descender capheight \
 aligncontentleft aligncontentmiddle aligncontentright shiftbox vpackbox \
-hpackbox vpackedbox hpackedbox normalreqno startimath \
-stopimath normalstartimath normalstopimath startdmath stopdmath \
-normalstartdmath normalstopdmath uncramped cramped mathstyletrigger \
-triggermathstyle triggeredmathstyle mathstylefont mathsmallstylefont mathstyleface \
-mathsmallstyleface mathstylecommand mathpalette mathstylehbox mathstylevbox \
-mathstylevcenter mathstylevcenteredhbox mathstylevcenteredvbox mathtext setmathsmalltextbox \
-setmathtextbox pushmathstyle popmathstyle triggerdisplaystyle triggertextstyle \
-triggerscriptstyle triggerscriptscriptstyle triggeruncrampedstyle triggercrampedstyle triggersmallstyle \
-triggeruncrampedsmallstyle triggercrampedsmallstyle triggerbigstyle triggeruncrampedbigstyle triggercrampedbigstyle \
-luaexpr expelsedoif expdoif expdoifnot expdoifelsecommon \
-expdoifcommonelse expdoifelseinset expdoifinsetelse glyphscaled ctxdirectlua \
-ctxlatelua ctxsprint ctxwrite ctxcommand ctxdirectcommand \
-ctxlatecommand ctxreport ctxlua luacode lateluacode \
-directluacode registerctxluafile ctxloadluafile luaversion luamajorversion \
-luaminorversion ctxluacode luaconditional luaexpanded ctxluamatch \
-ctxluamatchfile startluaparameterset stopluaparameterset luaparameterset definenamedlua \
-obeylualines obeyluatokens startluacode stopluacode startlua \
-stoplua startctxfunction stopctxfunction ctxfunction startctxfunctiondefinition \
-stopctxfunctiondefinition installctxfunction installprotectedctxfunction installprotectedctxscanner installctxscanner \
-resetctxscanner cldprocessfile cldloadfile cldloadviafile cldcontext \
-cldcommand carryoverpar freezeparagraphproperties defrostparagraphproperties setparagraphfreezing \
-forgetparagraphfreezing updateparagraphproperties updateparagraphpenalties updateparagraphdemerits updateparagraphshapes \
-updateparagraphlines updateparagraphpasses lastlinewidth assumelongusagecs righttolefthbox \
-lefttorighthbox righttoleftvbox lefttorightvbox righttoleftvtop lefttorightvtop \
-rtlhbox ltrhbox rtlvbox ltrvbox rtlvtop \
-ltrvtop autodirhbox autodirvbox autodirvtop leftorrighthbox \
-leftorrightvbox leftorrightvtop lefttoright righttoleft checkedlefttoright \
-checkedrighttoleft synchronizelayoutdirection synchronizedisplaydirection synchronizeinlinedirection dirlre \
-dirrle dirlro dirrlo rtltext ltrtext \
-lesshyphens morehyphens nohyphens dohyphens dohyphencollapsing \
-nohyphencollapsing compounddiscretionary doapostrophes noapostrophes Ucheckedstartdisplaymath \
-Ucheckedstopdisplaymath break nobreak allowbreak goodbreak \
-nospace nospacing dospacing naturalhbox naturalvbox \
-naturalvtop naturalhpack naturalvpack naturaltpack reversehbox \
-reversevbox reversevtop reversehpack reversevpack reversetpack \
-hcontainer vcontainer tcontainer frule compoundhyphenpenalty \
-start stop unsupportedcs openout closeout \
-write openin closein read readline \
-readlinedirect readfromterminal boxlines boxline setboxline \
-copyboxline boxlinewd boxlineht boxlinedp boxlinenw \
-boxlinenh boxlinend boxlinels boxliners boxlinelh \
-boxlinerh boxlinelp boxlinerp boxlinein boxrangewd \
-boxrangeht boxrangedp boxlinemaxwd boxlinemaxht boxlinemaxdp \
-bitwiseset bitwiseand bitwiseor bitwisexor bitwisenot \
-bitwisenil ifbitwiseand bitwise bitwiseshift bitwiseflip \
-textdir linedir pardir boxdir prelistbox \
-postlistbox prelistcopy postlistcopy setprelistbox setpostlistbox \
-noligaturing nokerning noexpansion noprotrusion noleftkerning \
-noleftligaturing norightkerning norightligaturing noitaliccorrection overloadspacefactor \
-futureletnexttoken defbackslashbreak letbackslashbreak pushoverloadmode popoverloadmode \
-pushrunstate poprunstate suggestedalias showboxhere discoptioncodestring \
-flagcodestring frozenparcodestring glyphoptioncodestring groupcodestring hyphenationcodestring \
-mathcontrolcodestring mathflattencodestring normalizecodestring parcontextcodestring newlocalcount \
-newlocaldimen newlocalskip newlocalmuskip newlocaltoks newlocalbox \
-newlocalwrite newlocalread setnewlocalcount setnewlocaldimen setnewlocalskip \
-setnewlocalmuskip setnewlocaltoks setnewlocalbox ifexpression localcontrolledrepeating \
-expandedrepeating unexpandedrepeating lastchkinteger ifchkinteger mathordinary \
-mathoperator mathbinary mathrelation mathpunctuation mathfraction \
-mathradical mathmiddle mathaccent mathfenced mathghost \
-mathvariable mathactive mathvcenter mathimaginary mathdifferential \
-mathexponential mathdigit mathdivision mathfactorial mathwrapped \
-mathconstruct mathdimension mathunary mathchemicalbond mathimplication \
-filebasename filenameonly filedirname filesuffix setmathoption \
-resetmathoption Ustack Umathdict Umathclass Ustyle \
-Uchar Usuperscript Usubscript Unosuperscript Unosubscript \
-Uprimescript Usuperprescript Usubprescript Unosuperprescript Unosubprescript \
-ignorefile boxwidth boxheight boxdepth shiftparshape \
-rotateparshape granularfitnessclasses granularadjacentdemerits matchallfitnessclasses defaultmathforwardpenalties \
-defaultmathbackwardpenalties optimalmathforwardpenalties optimalmathbackwardpenalties lesswidowpenalties lessclubpenalties \
-lessbrokenpenalties strictwidowpenalties strictwidowpenaltiestwo strictwidowpenaltiesthree strictwidowpenaltiesfour \
-strictclubpenalties strictclubpenaltiestwo strictclubpenaltiesthree strictclubpenaltiesfour strictbrokenpenalties \
-lessorphanpenalties lessorphanpenaltiestwo lessorphanpenaltiesthree lessorphanpenaltiesfour nohpenalties \
-novpenalties toddlerpenalty orphanpenalty 
+hpackbox vpackedbox hpackedbox vreflected normalreqno \
+startimath stopimath normalstartimath normalstopimath startdmath \
+stopdmath normalstartdmath normalstopdmath uncramped cramped \
+mathstyletrigger triggermathstyle triggeredmathstyle mathstylefont mathsmallstylefont \
+mathstyleface mathsmallstyleface mathstylecommand mathpalette mathstylehbox \
+mathstylevbox mathstylevcenter mathstylevcenteredhbox mathstylevcenteredvbox mathtext \
+setmathsmalltextbox setmathtextbox pushmathstyle popmathstyle triggerdisplaystyle \
+triggertextstyle triggerscriptstyle triggerscriptscriptstyle triggeruncrampedstyle triggercrampedstyle \
+triggersmallstyle triggeruncrampedsmallstyle triggercrampedsmallstyle triggerbigstyle triggeruncrampedbigstyle \
+triggercrampedbigstyle luaexpr expelsedoif expdoif expdoifnot \
+expdoifelsecommon expdoifcommonelse expdoifelseinset expdoifinsetelse glyphscaled \
+ctxdirectlua ctxlatelua ctxsprint ctxwrite ctxcommand \
+ctxdirectcommand ctxlatecommand ctxreport ctxlua luacode \
+lateluacode directluacode registerctxluafile ctxloadluafile luaversion \
+luamajorversion luaminorversion ctxluacode luaconditional luaexpanded \
+ctxluamatch ctxluamatchfile startluaparameterset stopluaparameterset luaparameterset \
+definenamedlua obeylualines obeyluatokens startluacode stopluacode \
+startlua stoplua startctxfunction stopctxfunction ctxfunction \
+startctxfunctiondefinition stopctxfunctiondefinition installctxfunction installprotectedctxfunction installprotectedctxscanner \
+installctxscanner resetctxscanner cldprocessfile cldloadfile cldloadviafile \
+cldcontext cldcommand carryoverpar freezeparagraphproperties defrostparagraphproperties \
+setparagraphfreezing forgetparagraphfreezing updateparagraphproperties updateparagraphpenalties updateparagraphdemerits \
+updateparagraphshapes updateparagraphlines updateparagraphpasses lastlinewidth assumelongusagecs \
+righttolefthbox lefttorighthbox righttoleftvbox lefttorightvbox righttoleftvtop \
+lefttorightvtop rtlhbox ltrhbox rtlvbox ltrvbox \
+rtlvtop ltrvtop autodirhbox autodirvbox autodirvtop \
+leftorrighthbox leftorrightvbox leftorrightvtop lefttoright righttoleft \
+checkedlefttoright checkedrighttoleft foolbidimode synchronizelayoutdirection synchronizedisplaydirection \
+synchronizeinlinedirection dirlre dirrle dirlro dirrlo \
+rtltext ltrtext lesshyphens morehyphens nohyphens \
+dohyphens dohyphencollapsing nohyphencollapsing compounddiscretionary doapostrophes \
+noapostrophes Ucheckedstartdisplaymath Ucheckedstopdisplaymath break nobreak \
+allowbreak goodbreak nospace nospacing dospacing \
+naturalhbox naturalvbox naturalvtop naturalhpack naturalvpack \
+naturaltpack reversehbox reversevbox reversevtop reversehpack \
+reversevpack reversetpack hcontainer vcontainer tcontainer \
+frule compoundhyphenpenalty start stop unsupportedcs \
+openout closeout write openin closein \
+read readline readlinedirect readfromterminal boxlines \
+boxline setboxline copyboxline boxlinewd boxlineht \
+boxlinedp boxlinenw boxlinenh boxlinend boxlinels \
+boxliners boxlinelh boxlinerh boxlinelp boxlinerp \
+boxlinein boxrangewd boxrangeht boxrangedp boxlinemaxwd \
+boxlinemaxht boxlinemaxdp bitwiseset bitwiseand bitwiseor \
+bitwisexor bitwisenot bitwisenil ifbitwiseand bitwise \
+bitwiseshift bitwiseflip textdir linedir pardir \
+boxdir prelistbox postlistbox prelistcopy postlistcopy \
+setprelistbox setpostlistbox noligaturing nokerning noexpansion \
+noprotrusion noleftkerning noleftligaturing norightkerning norightligaturing \
+noitaliccorrection overloadspacefactor futureletnexttoken defbackslashbreak letbackslashbreak \
+pushoverloadmode popoverloadmode pushrunstate poprunstate suggestedalias \
+showboxhere discoptioncodestring flagcodestring frozenparcodestring glyphoptioncodestring \
+groupcodestring hyphenationcodestring mathcontrolcodestring mathflattencodestring normalizecodestring \
+parcontextcodestring newlocalcount newlocaldimen newlocalskip newlocalmuskip \
+newlocaltoks newlocalbox newlocalwrite newlocalread setnewlocalcount \
+setnewlocaldimen setnewlocalskip setnewlocalmuskip setnewlocaltoks setnewlocalbox \
+ifexpression localcontrolledrepeating expandedrepeating unexpandedrepeating lastchkinteger \
+ifchkinteger mathordinary mathoperator mathbinary mathrelation \
+mathpunctuation mathfraction mathradical mathmiddle mathaccent \
+mathfenced mathghost mathvariable mathactive mathvcenter \
+mathimaginary mathdifferential mathexponential mathdigit mathdivision \
+mathfactorial mathwrapped mathconstruct mathdimension mathunary \
+mathchemicalbond mathimplication filebasename filenameonly filedirname \
+filesuffix setmathoption resetmathoption Ustack Umathdict \
+Umathclass Ustyle Uchar Usuperscript Usubscript \
+Unosuperscript Unosubscript Uprimescript Usuperprescript Usubprescript \
+Unosuperprescript Unosubprescript ignorefile boxwidth boxheight \
+boxdepth shiftparshape rotateparshape granularfitnessclasses granularadjacentdemerits \
+matchallfitnessclasses defaultmathforwardpenalties defaultmathbackwardpenalties optimalmathforwardpenalties optimalmathbackwardpenalties \
+lesswidowpenalties lessclubpenalties lessbrokenpenalties strictwidowpenalties strictwidowpenaltiestwo \
+strictwidowpenaltiesthree strictwidowpenaltiesfour strictclubpenalties strictclubpenaltiestwo strictclubpenaltiesthree \
+strictclubpenaltiesfour strictbrokenpenalties lessorphanpenalties lessorphanpenaltiestwo lessorphanpenaltiesthree \
+lessorphanpenaltiesfour nohpenalties novpenalties toddlerpenalty orphanpenalty 
 
