--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -168,18 +168,18 @@ splitlastdepth splitlastheight splitlastshrink splitlaststretch srule \
 subprescript subscript superprescript superscript supmarkmode \
 swapcsvalues tabsize textdirection thewithoutunit tinymuskip \
 tocharacter toddlerpenalties todimension tohexadecimal tointeger \
-tokenized toksapp tokspre tolerant tomathstyle \
-toscaled tosparsedimension tosparsescaled tpack tracingadjusts \
-tracingalignments tracingbalancing tracingexpressions tracingfitness tracingfullboxes \
-tracinghyphenation tracinginserts tracinglevels tracinglists tracinglooseness \
-tracingmarks tracingmath tracingmvl tracingnodes tracingorphans \
-tracingpasses tracingpenalties tracingtoddlers tsplit uleaders \
-undent unexpandedendless unexpandedloop unexpandedrepeat unhpack \
-unletfrozen unletprotected untraced unvpack variablefam \
-vbadnessmode vbalance vbalancedbox vbalanceddeinsert vbalanceddiscard \
-vbalancedinsert vbalancedreinsert vbalancedtop virtualhrule virtualvrule \
-vpack vpenalty vsplitchecks wordboundary wrapuppar \
-xdefcsname xtoks xtoksapp xtokspre 
+tokenized toksapp tokspre tolerant tolimitedfloat \
+tomathstyle toscaled tosparsedimension tosparsescaled tpack \
+tracingadjusts tracingalignments tracingbalancing tracingexpressions tracingfitness \
+tracingfullboxes tracinghyphenation tracinginserts tracinglevels tracinglists \
+tracinglooseness tracingmarks tracingmath tracingmvl tracingnodes \
+tracingorphans tracingpasses tracingpenalties tracingtoddlers tsplit \
+uleaders undent unexpandedendless unexpandedloop unexpandedrepeat \
+unhpack unletfrozen unletprotected untraced unvpack \
+variablefam vbadnessmode vbalance vbalancedbox vbalanceddeinsert \
+vbalanceddiscard vbalancedinsert vbalancedreinsert vbalancedtop virtualhrule \
+virtualvrule vpack vpenalty vsplitchecks wordboundary \
+wrapuppar xdefcsname xtoks xtoksapp xtokspre 
 
 keywordclass.tex.omega=\
 Omegaminorversion Omegarevision Omegaversion 
